# chktex-action

./: .gitignore  Dockerfile  action.yml  compose.yaml  pyproject.toml
.github/workflows/: build-and-push-image.yml  build-and-test-image.yml  formatting-and-linting.yml
src/chktex_action/: action.py  chktex.py  environment.py  logger.py  main.py  pull_request.py  pull_request_review.py  step_summary.py  util.py
tests/: conftest.py  test_action.py  test_chktex.py  test_environment.py  test_logger.py  test_pull_request_review.py  test_step_summary.py
